gac_sb/objects/AppCIRinterlocuteur__c.object
<CustomObject>
    <description>APPLICATION CIR - Les interlocuteurs d&apos;une entité d&apos;un contrat CIR</description>
    <fields>
        <fullName>Adresse__c</fullName>
        <label>Adresse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Civilite__c</fullName>
        <label>Civilité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M.</fullName>
                </value>
                <value>
                    <fullName>Mme</fullName>
                </value>
                <value>
                    <fullName>Melle</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Prof</fullName>
                </value>
                <value>
                    <fullName>Me</fullName>
                </value>
                <value>
                    <fullName>Pr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_postal__c</fullName>
        <label>Code postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entite__c</fullName>
        <description>L&apos;entité à laquelle est rattachée l&apos;interlocuteur</description>
        <label>Entité</label>
        <referenceTo>AppCIRentite__c</referenceTo>
        <relationshipName>Interlocuteurs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fonction__c</fullName>
        <label>Fonction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prénom</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Téléphone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <label>Ville</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>[OLD] Interlocuteur</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interlocuteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>